* <span class="label label-info">Modified</span> The pin and unpin actions are now combined into a single checkbox action.
* <span class="label label-info">Modified</span> The preference for marking moved items as pinned is now disabled by default. You can re-enable it via Window > Preferences > Sirius > Sirius Diagram

h3. Specifier-Visible Changes

h3. Developer-Visible Changes

* <span class="label label-info">Modified</span> ArrangeBorderNodesAction.initAction now has two parameters for its text: when there is no selection, when there is a selection.

h4. Changes in @org.eclipse.sirius.diagram.ui@

* <span class="label label-success">Added</span> The constant @org.eclipse.sirius.diagram.ui.business.api.view.SiriusLayoutDataManager.KEEP_FIXED@ has been added to tag elements to be laid out and indicate that their location should not be modified.
* <span class="label label-success">Added</span> Method @org.eclipse.sirius.diagram.ui.business.api.view.SiriusLayoutDataManager.getArrangeCreatedViewsCommand(List<IAdaptable>, List<IAdaptable>, IGraphicalEditPart, String)@ has been added to handle the new @KEEP_FIXED@ layout tag. There are now 3 types of tags that can be used for layout: @org.eclipse.gmf.runtime.diagram.ui.services.layout.LayoutType.DEFAULT@, @org.eclipse.sirius.diagram.ui.business.api.view.SiriusLayoutDataManager.LAYOUT_TYPE_ARRANGE_AT_OPENING@ and @org.eclipse.sirius.diagram.ui.business.api.view.SiriusLayoutDataManager.KEEP_FIXED@.

h2(#sirius7.3.0). Changes in Sirius 7.3.0

h3. User-Visible Changes

* <span class="label label-success">Added</span> A new preference has been added in the Sirius Diagram preference page. This preference allows the user to choose the arrangement of elements created on a diagram when they are not directly positioned by the user. In the preference page, users can choose between a diagonal, vertical or horizontal arrangement.

h3. Specifier-Visible Changes

h3. Developer-Visible Changes
