@@ -74,6 +74,9 @@
 			<li>
 				<code>org.eclipse.sirius.diagram.ui.provider.Messages.MovePinnedElementsAction_toolTipText</code>
 			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.PinElementsEclipseAction_tooltip</code>
+			</li>
 		</ul>
 		<h3 id="MessageValuesChanged">Message Values Changed</h3>
 		<ul>
@@ -85,6 +88,9 @@
 			</li>
 			<li>
 				<code>org.eclipse.sirius.diagram.ui.provider.Messages.ArrangeBorderNodesAction_toolbarActionText</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.diagram.ui.provider.Messages.PinElementsEclipseAction_text</code>
 			</li>
 		</ul>
 		<h3 id="MessageKeysRemoved">Message Keys Removed</h3>
